// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`bin script points nowhere does not try to create symlink on node_modules/.bin for that bin script: fs module calls 1`] = `
Object {
  "chmod": Array [
    Array [
      "<repoRoot>/packages/kbn-pm/src/utils/foo/node_modules/.bin",
      "755",
    ],
    Array [
      "<repoRoot>/packages/kbn-pm/src/utils/baz/node_modules/.bin",
      "755",
    ],
  ],
  "copyDirectory": Array [],
  "createSymlink": Array [
    Array [
      "<repoRoot>/packages/kbn-pm/src/utils/bar/node_modules/.bin",
      "<repoRoot>/packages/kbn-pm/src/utils/foo/node_modules/.bin",
      "dir",
    ],
    Array [
      "<repoRoot>/packages/kbn-pm/src/utils/bar/node_modules/.bin",
      "<repoRoot>/packages/kbn-pm/src/utils/baz/node_modules/.bin",
      "dir",
    ],
  ],
  "isDirectory": Array [
    Array [
      "<repoRoot>/packages/kbn-pm/src/utils/bar/node_modules/.bin",
    ],
  ],
  "isFile": Array [],
  "isSymlink": Array [],
  "mkdirp": Array [
    Array [
      "<repoRoot>/packages/kbn-pm/src/utils/foo/node_modules",
    ],
    Array [
      "<repoRoot>/packages/kbn-pm/src/utils/baz/node_modules",
    ],
  ],
  "readFile": Array [],
  "rmdirp": Array [
    Array [
      "<repoRoot>/packages/kbn-pm/src/utils/foo/node_modules",
    ],
    Array [
      "<repoRoot>/packages/kbn-pm/src/utils/baz/node_modules",
    ],
  ],
  "unlink": Array [],
  "writeFile": Array [],
}
`;

exports[`bin script points nowhere does not try to create symlink or node_modules/.bin directory on root project: fs module calls 1`] = `
Object {
  "chmod": Array [
    Array [
      "<repoRoot>/packages/kbn-pm/src/utils/foo/node_modules/.bin",
      "755",
    ],
    Array [
      "<repoRoot>/packages/kbn-pm/src/utils/baz/node_modules/.bin",
      "755",
    ],
  ],
  "copyDirectory": Array [],
  "createSymlink": Array [
    Array [
      "<repoRoot>/packages/kbn-pm/src/utils/bar/node_modules/.bin",
      "<repoRoot>/packages/kbn-pm/src/utils/foo/node_modules/.bin",
      "dir",
    ],
    Array [
      "<repoRoot>/packages/kbn-pm/src/utils/bar/node_modules/.bin",
      "<repoRoot>/packages/kbn-pm/src/utils/baz/node_modules/.bin",
      "dir",
    ],
  ],
  "isDirectory": Array [
    Array [
      "<repoRoot>/packages/kbn-pm/src/utils/bar/node_modules/.bin",
    ],
  ],
  "isFile": Array [],
  "isSymlink": Array [],
  "mkdirp": Array [
    Array [
      "<repoRoot>/packages/kbn-pm/src/utils/foo/node_modules",
    ],
    Array [
      "<repoRoot>/packages/kbn-pm/src/utils/baz/node_modules",
    ],
  ],
  "readFile": Array [],
  "rmdirp": Array [
    Array [
      "<repoRoot>/packages/kbn-pm/src/utils/foo/node_modules",
    ],
    Array [
      "<repoRoot>/packages/kbn-pm/src/utils/baz/node_modules",
    ],
  ],
  "unlink": Array [],
  "writeFile": Array [],
}
`;

exports[`bin script points nowhere does not try to create symlink or node_modules/.bin directory: fs module calls 1`] = `
Object {
  "chmod": Array [],
  "copyDirectory": Array [],
  "createSymlink": Array [],
  "isDirectory": Array [],
  "isFile": Array [
    Array [
      "<repoRoot>/packages/kbn-pm/src/utils/bar/bin/bar.js",
    ],
    Array [
      "<repoRoot>/packages/kbn-pm/src/utils/bar/bin/bar.js",
    ],
  ],
  "isSymlink": Array [],
  "mkdirp": Array [],
  "readFile": Array [],
  "unlink": Array [],
  "writeFile": Array [],
}
`;

exports[`bin script points to a file creates a symlink for the project bin into the roots project node_modules/.bin directory as well as node_modules/.bin directory symlink into the roots one: fs module calls 1`] = `
Object {
  "chmod": Array [
    Array [
      "<repoRoot>/packages/kbn-pm/src/utils/foo/node_modules/.bin",
      "755",
    ],
    Array [
      "<repoRoot>/packages/kbn-pm/src/utils/baz/node_modules/.bin",
      "755",
    ],
  ],
  "copyDirectory": Array [],
  "createSymlink": Array [
    Array [
      "<repoRoot>/packages/kbn-pm/src/utils/bar/node_modules/.bin",
      "<repoRoot>/packages/kbn-pm/src/utils/foo/node_modules/.bin",
      "dir",
    ],
    Array [
      "<repoRoot>/packages/kbn-pm/src/utils/bar/node_modules/.bin",
      "<repoRoot>/packages/kbn-pm/src/utils/baz/node_modules/.bin",
      "dir",
    ],
  ],
  "isDirectory": Array [
    Array [
      "<repoRoot>/packages/kbn-pm/src/utils/bar/node_modules/.bin",
    ],
  ],
  "isFile": Array [],
  "isSymlink": Array [],
  "mkdirp": Array [
    Array [
      "<repoRoot>/packages/kbn-pm/src/utils/bar/node_modules/.bin",
    ],
    Array [
      "<repoRoot>/packages/kbn-pm/src/utils/foo/node_modules",
    ],
    Array [
      "<repoRoot>/packages/kbn-pm/src/utils/baz/node_modules",
    ],
  ],
  "readFile": Array [],
  "rmdirp": Array [
    Array [
      "<repoRoot>/packages/kbn-pm/src/utils/foo/node_modules",
    ],
    Array [
      "<repoRoot>/packages/kbn-pm/src/utils/baz/node_modules",
    ],
  ],
  "unlink": Array [],
  "writeFile": Array [],
}
`;

exports[`bin script points to a file creates a symlink in the project node_modules/.bin directory: fs module calls 1`] = `
Object {
  "chmod": Array [
    Array [
      "<repoRoot>/packages/kbn-pm/src/utils/foo/node_modules/.bin/bar",
      "755",
    ],
    Array [
      "<repoRoot>/packages/kbn-pm/src/utils/baz/node_modules/.bin/bar",
      "755",
    ],
  ],
  "copyDirectory": Array [],
  "createSymlink": Array [
    Array [
      "<repoRoot>/packages/kbn-pm/src/utils/bar/bin/bar.js",
      "<repoRoot>/packages/kbn-pm/src/utils/foo/node_modules/.bin/bar",
      "exec",
    ],
    Array [
      "<repoRoot>/packages/kbn-pm/src/utils/bar/bin/bar.js",
      "<repoRoot>/packages/kbn-pm/src/utils/baz/node_modules/.bin/bar",
      "exec",
    ],
  ],
  "isDirectory": Array [],
  "isFile": Array [
    Array [
      "<repoRoot>/packages/kbn-pm/src/utils/bar/bin/bar.js",
    ],
    Array [
      "<repoRoot>/packages/kbn-pm/src/utils/bar/bin/bar.js",
    ],
  ],
  "isSymlink": Array [],
  "mkdirp": Array [
    Array [
      "<repoRoot>/packages/kbn-pm/src/utils/foo/node_modules/.bin",
    ],
    Array [
      "<repoRoot>/packages/kbn-pm/src/utils/baz/node_modules/.bin",
    ],
  ],
  "readFile": Array [],
  "unlink": Array [],
  "writeFile": Array [],
}
`;

exports[`bin script points to a file creates a symlink in the root project node_modules/.bin directory as well as symlinks on child projects into root project node_modules/.bin directory: fs module calls 1`] = `
Object {
  "chmod": Array [
    Array [
      "<repoRoot>/packages/kbn-pm/src/utils/foo/node_modules/.bin",
      "755",
    ],
    Array [
      "<repoRoot>/packages/kbn-pm/src/utils/baz/node_modules/.bin",
      "755",
    ],
  ],
  "copyDirectory": Array [],
  "createSymlink": Array [
    Array [
      "<repoRoot>/packages/kbn-pm/src/utils/bar/node_modules/.bin",
      "<repoRoot>/packages/kbn-pm/src/utils/foo/node_modules/.bin",
      "dir",
    ],
    Array [
      "<repoRoot>/packages/kbn-pm/src/utils/bar/node_modules/.bin",
      "<repoRoot>/packages/kbn-pm/src/utils/baz/node_modules/.bin",
      "dir",
    ],
  ],
  "isDirectory": Array [
    Array [
      "<repoRoot>/packages/kbn-pm/src/utils/bar/node_modules/.bin",
    ],
  ],
  "isFile": Array [],
  "isSymlink": Array [],
  "mkdirp": Array [
    Array [
      "<repoRoot>/packages/kbn-pm/src/utils/bar/node_modules/.bin",
    ],
    Array [
      "<repoRoot>/packages/kbn-pm/src/utils/foo/node_modules",
    ],
    Array [
      "<repoRoot>/packages/kbn-pm/src/utils/baz/node_modules",
    ],
  ],
  "readFile": Array [],
  "rmdirp": Array [
    Array [
      "<repoRoot>/packages/kbn-pm/src/utils/foo/node_modules",
    ],
    Array [
      "<repoRoot>/packages/kbn-pm/src/utils/baz/node_modules",
    ],
  ],
  "unlink": Array [],
  "writeFile": Array [],
}
`;
